# logix

./: .gitignore  CMakeLists.txt  Logix.cpp  Logix.h  README.md
examples/: Examples.cpp  Examples.h
include/logix/: AsyncLogger.h  LogLevel.h  LogMessage.h  Logger.h  ThreadPool.h
include/logix/misc/: Common.h  Utils.h  scope_guard.hpp
include/logix/sinks/: ConsoleSink.h  FileSink.h  Sink.h
src/: App.cpp  AsyncLogger.cpp  LogLevel.cpp  LogMessage.cpp  Logger.cpp  ThreadPool.cpp
src/misc/: Utils.cpp
src/sink/: ConsoleSink.cpp  FileSink.cpp  Sink.cpp
test/: Benchmarks.cpp  Benchmarks.h  UnitTests.cpp  UnitTests.h
